kyverno-policies/policies/disallow-privileged.yaml
# Policy: Disallow Privileged Containers
# Purpose: Blocks containers from running in privileged mode
# Benefit: Reduces risk of container escape and security breaches

# apiVersion: kyverno.io/v1
# kind: ClusterPolicy
# metadata:
#   name: disallow-privileged
# spec:
#   validationFailureAction: enforce
#   rules:
#     - name: no-privileged
#       match:
#         resources:
#           kinds:
#             - Pod
#       validate:
#         message: "Privileged containers are not allowed"
#         pattern:
#           spec:
#             containers:
#               - securityContext:
#                   privileged: false

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: no-privileged
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - default
            - dev
            - staging
      exclude:
        resources:
          namespaces:
          - keda
          - kube-system
          - argocd
          - kyverno
          - keda
      validate:
        message: "Privileged containers are not allowed."
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
